// Vitest Snapshot v1

exports[`CommentTree > renders a comment tree with comments 1`] = `
"<div data-v-1d76124d=\\"\\">
  <form class=\\"\\" data-v-1d76124d=\\"\\">
    <!--v-if-->
    <article class=\\"flex flex-wrap items-start gap-2\\" data-v-1d76124d=\\"\\">
      <figure class=\\"\\" data-v-1d76124d=\\"\\">
        <identity-picker-wrapper-stub modelvalue=\\"[object Object]\\" inline=\\"false\\" masked=\\"false\\" data-v-1d76124d=\\"\\"></identity-picker-wrapper-stub>
      </figure>
      <div class=\\"flex-1\\" data-v-1d76124d=\\"\\">
        <div class=\\"flex flex-col gap-2\\" data-v-1d76124d=\\"\\">
          <div class=\\"editor-wrapper\\" data-v-1d76124d=\\"\\">
            <editor-stub currentactor=\\"[object Object]\\" mode=\\"comment\\" modelvalue=\\"\\" aria-label=\\"Comment body\\" data-v-1d76124d=\\"\\"></editor-stub>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div class=\\"\\" data-v-1d76124d=\\"\\">
        <o-button-stub variant=\\"primary\\" iconleft=\\"send\\" rounded=\\"false\\" outlined=\\"false\\" expanded=\\"false\\" inverted=\\"false\\" nativetype=\\"submit\\" tag=\\"button\\" disabled=\\"false\\" iconboth=\\"false\\" data-v-1d76124d=\\"\\"></o-button-stub>
      </div>
    </article>
  </form>
  <transition-group-stub data-v-1d76124d=\\"\\">
    <transition-group-stub data-v-1d76124d=\\"\\">
      <comment-stub comment=\\"[object Object]\\" event=\\"[object Object]\\" currentactor=\\"[object Object]\\" rootcomment=\\"true\\" class=\\"root-comment\\" data-v-1d76124d=\\"\\"></comment-stub>
      <comment-stub comment=\\"[object Object]\\" event=\\"[object Object]\\" currentactor=\\"[object Object]\\" rootcomment=\\"true\\" class=\\"root-comment\\" data-v-1d76124d=\\"\\"></comment-stub>
    </transition-group-stub>
  </transition-group-stub>
</div>"
`;

exports[`CommentTree > renders a loading comment tree 1`] = `
"<div data-v-1d76124d=\\"\\">
  <!--v-if-->
  <p class=\\"text-center\\" data-v-1d76124d=\\"\\">Loading comments…</p>
</div>"
`;

exports[`CommentTree > renders an empty comment tree 1`] = `
"<div data-v-1d76124d=\\"\\">
  <form class=\\"\\" data-v-1d76124d=\\"\\">
    <!--v-if-->
    <article class=\\"flex flex-wrap items-start gap-2\\" data-v-1d76124d=\\"\\">
      <figure class=\\"\\" data-v-1d76124d=\\"\\">
        <identity-picker-wrapper-stub modelvalue=\\"[object Object]\\" inline=\\"false\\" masked=\\"false\\" data-v-1d76124d=\\"\\"></identity-picker-wrapper-stub>
      </figure>
      <div class=\\"flex-1\\" data-v-1d76124d=\\"\\">
        <div class=\\"flex flex-col gap-2\\" data-v-1d76124d=\\"\\">
          <div class=\\"editor-wrapper\\" data-v-1d76124d=\\"\\">
            <editor-stub currentactor=\\"[object Object]\\" mode=\\"comment\\" modelvalue=\\"\\" aria-label=\\"Comment body\\" data-v-1d76124d=\\"\\"></editor-stub>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div class=\\"\\" data-v-1d76124d=\\"\\">
        <o-button-stub variant=\\"primary\\" iconleft=\\"send\\" rounded=\\"false\\" outlined=\\"false\\" expanded=\\"false\\" inverted=\\"false\\" nativetype=\\"submit\\" tag=\\"button\\" disabled=\\"false\\" iconboth=\\"false\\" data-v-1d76124d=\\"\\"></o-button-stub>
      </div>
    </article>
  </form>
  <transition-group-stub data-v-1d76124d=\\"\\">
    <empty-content-stub icon=\\"comment\\" descriptionclasses=\\"\\" inline=\\"true\\" center=\\"false\\" data-v-1d76124d=\\"\\"></empty-content-stub>
  </transition-group-stub>
</div>"
`;
